-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.16 2007-06-06 18:56:59 remko Exp $
-----------------------------------------------------------------------------------------

2007-06-06	remko
	* ps2raster.c:		Added -P option to force Portrait mode
				Allow generation of EPS with other formats (e.g. -Tef)
	* doc/makefile:		Use new -P and -Tef options of ps2raster

2007-06-05	remko
	* tests/*/orig:		Created subdirectories for originals
	* tests/*/*.sh:		Changed accordingly
	* doc/GMT_Appendix_K.tex:	Coastline data base sizes updated
	* doc/scripts/get*.sh:	Made simpler. Fewer changes in -R and -J
	* doc/scripts/GMT_App_K*.sh:	---"---
	* doc/scripts/*/orig:	Created subdirectories for originals
	* makefile.guru:	Changed accordingly
	* gmt_proj.c (GMT_[i]translind):	Reverted change from 2007-06-02 (see next entry)
	* gmt_map.c:		Set project_info.M_PR_DEG to 1 in case of -J[x|X] to make "step" work
				in GMT_fix_up_path
	* gmt_plot.c (GMT_<symbol>):	Use "native" PS symbols also when filling with pattern.
	* gmt_support.c:	Removed function GMT_fill_is_image
	* pslib.c:		Renamed ps_imagefill to ps_pattern.
				Support new PS symbol definitions.
				New PS Level 2 pattern fill mechanism.
	* PSL_prologue.ps:	---"---
	* psscale.c:		Use GMT_fill instead of ps_imagefill
	* psxyz.c:		Fixed bug in painting outline of text symbols

2007-06-02	remko
	* run_gmt_tests.sh:	Use run_gmt_tests.sh <directories> to test only specified directories.
	* tests/genper:		Remove grid file on success
	* gmt_proj.c (GMT_[i]translind):	multiply/divide by project_info.M_PR_DEG to make
				"step" work in GMT_fix_up_path (see 2007-05-24).

2007-05-31	pwessel
	* psbasemap.c:		Check that -L is used with geographic coordinates only

2007-05-29	pwessel
	* gmt_plot.c:		Failed to activate ddd.mm.xxx format for maps
	* gmt_proj.c:		-JS inverse did not apply quadrant check

2007-05-25	pwessel