@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_7.tex,v 1.35 2007-05-14 21:35:33 remko Exp $
+%	$Id: GMT_Chapter_7.tex,v 1.36 2007-06-06 19:12:35 remko Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2007.
@@ -166,7 +166,7 @@ resample the projected data, and carry out the cross-spectral
 calculations, assuming that the ship is the input and the satellite
 is the output data.  There are several intermediate steps that
 produce helpful plots showing the effect of the various processing
-steps (\filename{example\_3[a--f].ps}), while the final plot
+steps (\filename{example\_03[a--f].ps}), while the final plot
 \filename{example\_03.ps} shows
 the ship and sat power in one diagram and the coherency on another
 diagram, both on the same page.  Note the extended use of
